--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -9,7 +9,34 @@
     {% endfor %}
 {% endblock %}
 
-{% block top_menu_right %}                  
+{% block top_menu_right %}
+    <li class="dropdown dropdown-TOP10Results">
+        <a class="dropdown-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> TOP10 Results <strong class="caret"></strong></a>
+        <div class="dropdown-menu" style="padding: 15px; width: auto;">
+            <div class="control-panel">
+                <table class="table table-condensed table-striped table-responsive">
+                  <tr>
+                      <th style="text-align: center">User</th>
+                      <th style="text-align: center">Score</th>
+                  </tr>
+                  {% for item in top10ranking_list_user %}
+                    <tr>
+                        <td>{{ item.0 }}</td>
+                        <td style="text-align: center">{{ item.1|floatformat:"1" }}</td>
+                    </tr>
+                  {% endfor %}
+                </table>
+            </div>
+        </div>
+    </li>
+    <li class="dropdown dropdown-TOP10QA">
+        <a class="dropdown-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-pencil"></span> TOP10 Questions/Answers <strong class="caret"></strong></a>
+        <div class="dropdown-menu" style="padding: 15px; width: auto;">
+            <div class="control-panel">
+                {% include "form_TOP10.html" with form=form_top10qa %}
+            </div>
+        </div>
+    </li>
     {% for panel in control_list %}
         {% if panel.visible %}
             <li class="dropdown"><!-- {{ panel.title|upper }} -->
@@ -91,7 +118,8 @@
 <script type="text/javascript" src="{% static "pyscada/js/flot/jquery.flot.selection.min.js" %}"></script>
 <script type="text/javascript" src="{% static "pyscada/js/flot/jquery.flot.axislabels.js" %}"></script>
 <script type="text/javascript" src="{% static "pyscada/js/pyscada/pyscada.js" %}"></script>
-{% endblock %}        
+<script type="text/javascript" src="{% static "pyscada/laborem/js/pyscada_laborem.js" %}"></script>
+{% endblock %}
 {% block script_bottom %}
         $( document ).ready(function() {
             // Handler for .ready() called.
