Moving css from PyScada to PyScada-LaboREM Add new css file to base_laborem.html Adding Next and Previous buttons

--- a/pyscada/laborem/templates/DUT.html
+++ b/pyscada/laborem/templates/DUT.html
@@ -1,7 +1,7 @@
 {% if plug.plug_image %}
-    <a href="#" class="list-group-item" data-img="{{ plug.plug_image.url }}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}">{{ plug.description }}
+    <a href="javascript:;" class="list-group-item" data-img="{{ plug.plug_image.url }}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.description }}
 {% else %}
-    <a href="#" class="list-group-item" data-img="/media/img/laborem/plugs/no_img.jpg" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}">{{ plug.description }}
+    <a href="javascript:;" class="list-group-item" data-img="/media/img/laborem/plugs/no_img.jpg" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.description }}
 {% endif %}
 {% if "ROBOT" in plug.name|upper %}
     <span class="badge">Robot</span>
