--- a/pyscada/laborem/templates/robot_selector.html
+++ b/pyscada/laborem/templates/robot_selector.html
@@ -1,10 +1,13 @@
 Robot selector for {{ base.name }}:<br>
 <div class="dropdown col-md-2" id="{{ base.pk }}">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">-------
+    <button class="btn btn-primary dropdown-toggle dropdown-robot-btn" type="button" data-toggle="dropdown">
+        <span class="ui-dropdown-robot-bnt">------- </span>
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
         {% for Element in visible_robot_element_list %}
-            <li class="dropdown-base" id="{{ Element.pk }}"><a href="javascript:;">{{ Element.name }} </a></li>
+            <li class="dropdown-base" id="{{ Element.pk }}">
+                <a href="javascript:;">{{ Element.name }} </a>
+            </li>
         {% endfor %}
     </ul>
  </div>
