--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -12,6 +12,25 @@
 {% endblock %}
 
 {% block top_menu_right %}
+    <li class="dropdown dropdown-WaitingList">
+        <a class="dropdown-toggle dropdown-WaitingList-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-time"></span> Waiting List <strong class="caret"></strong></a>
+        <div class="dropdown-menu" style="padding: 15px;">
+            <div class="control-panel">
+                <table class="table table-condensed table-striped table-responsive table-activeuser" style="width: 300px;">
+                  <tr class="activeuser-header">
+                      <th style="text-align: center; width: 150px;">Active User</th>
+                      <th style="text-align: center; width: 150px;">Working Time left</th>
+                  </tr>
+                </table>
+                <table class="table table-condensed table-striped table-responsive table-waitingusers">
+                  <tr class="waitingusers-header">
+                      <th style="text-align: center; width: 150px;">Waiting Users</th>
+                      <th style="text-align: center; width: 150px;">Waiting Time</th>
+                  </tr>
+                </table>
+            </div>
+        </div>
+    </li>
     <li class="dropdown dropdown-TOP10Results">
         <a class="dropdown-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> TOP10 Results <strong class="caret"></strong></a>
         <div class="dropdown-menu" style="padding: 15px; width: auto;">
