Update user hmi. Add message side top menu to send info to the user.

--- a/pyscada/laborem/static/pyscada/laborem/css/pyscada-laborem-theme.css
+++ b/pyscada/laborem/static/pyscada/laborem/css/pyscada-laborem-theme.css
@@ -7,3 +7,12 @@
     color: red;
     padding-top: 15px;
 }
+
+.message-laborem h2 {
+    margin-bottom: 40px;
+}
+
+.side-menu.top {
+	top: -100px;
+    text-align: center;
+}
