--- a/pyscada/laborem/templates/base_laborem.html
+++ b/pyscada/laborem/templates/base_laborem.html
@@ -46,9 +46,9 @@
                                 <ul class="dropdown-menu">
                                     <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">{{ user.first_name }} {{ user.last_name }}</a></li>	
                                     <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">{{ user.email }}</a></li>
-                                    <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">change user info</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="/accounts/password_change" target="_blank"> change password</a></li>
+                                    <li role="presentation" class="disabled hidden"><a role="menuitem" tabindex="-1" href="#">change user info</a></li>
+                                    <li class="divider hidden"></li>
+                                    <li class="disabled hidden"><a href="/accounts/password_change" target="_blank"> change password</a></li>
                                     <li class="divider"></li>
                                     <li><a href="/accounts/logout"> logout</a></li>
                                 </ul>
