--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -12,10 +12,6 @@
 {% endblock %}
 
 {% block top_menu_right %}
-    <li class="message-laborem hidden">
-        <p><img id="laborem-loadingAnimation" style="display: inline; height:15px;padding-bottom:3px;" src="{% static 'pyscada/img/load.gif' %}" alt="loading">
-         Nothing to say</p>
-    </li>
     <li class="dropdown dropdown-WaitingList">
         <a class="dropdown-toggle dropdown-WaitingList-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-time"></span> Waiting List <strong class="caret"></strong></a>
         <div class="dropdown-menu" style="padding: 15px;">
@@ -77,7 +73,7 @@
             </li>
         {% endif %}
     {% endfor %}
-        <li class="dropdown"><!-- Settings -->
+        <li class="dropdown hidden"><!-- Settings -->
             <a class="dropdown-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span> Options <strong class="caret"></strong></a>
             <div class="dropdown-menu" style="padding: 15px; padding-bottom: 15px; width:70%; min-width:380px;">
                 <ul>
@@ -132,6 +128,11 @@
             <li>Camera</li>
             <img id="camera-img" src="{% static 'pyscada/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
         </ul>
+    </div>
+    <div class="row">
+        <div class="message-laborem side-menu top col-md-4 col-md-offset-4">
+            <h2><img id="laborem-loadingAnimation" style="height:30px;padding-bottom:3px;" src="{% static 'pyscada/img/load.gif' %}" alt="loading"> Nothing to say</h2>
+        </div>
     </div>
 {% endblock %}
 {% block include_bootom %}
