--- a/pyscada/laborem/templates/robot_selector.html
+++ b/pyscada/laborem/templates/robot_selector.html
@@ -1,5 +1,5 @@
 Robot selector for {{ base.name }}:<br>
-<div class="dropdown col-md-2" id="{{ base.pk }}">
+<div class="dropdown dropdown-robot col-md-2" id="{{ base.pk }}">
     <button class="btn btn-primary dropdown-toggle dropdown-robot-btn" type="button" data-toggle="dropdown">
         <span class="ui-dropdown-robot-bnt">------- </span>
     <span class="caret"></span></button>
