--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -129,9 +129,15 @@
             <img id="camera-img" src="{% static 'pyscada/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
         </ul>
     </div>
+    <div class="summary side-menu right hidden col-md-3" style="width: 300px; list-style: circle;">
+        <ul class="summary status-panel">
+            <li>Summary</li>
+        </ul>
+    </div>
     <div class="row">
         <div class="message-laborem side-menu top col-md-4 col-md-offset-4">
             <h2><img id="laborem-loadingAnimation" style="height:30px;padding-bottom:3px;" src="{% static 'pyscada/img/load.gif' %}" alt="loading"> Nothing to say</h2>
+            <div class="progress-bar hidden" role="progressbar" style="min-width: 2em;width:100%">100%</div>
         </div>
     </div>
 {% endblock %}
