fix progress bar

--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -137,7 +137,9 @@
     <div class="row">
         <div class="message-laborem side-menu top col-md-4 col-md-offset-4">
             <h2><img id="laborem-loadingAnimation" style="height:30px;padding-bottom:3px;" src="{% static 'pyscada/img/load.gif' %}" alt="loading"> Nothing to say</h2>
-            <div class="progress-bar hidden" role="progressbar" style="min-width: 2em;width:100%">100%</div>
+            <div style="width:50%; margin-left: auto; margin-right: auto;">
+                <div class="progress-bar hidden" role="progressbar" style="min-width: 2em;width:100%">100%</div>
+            </div>
         </div>
     </div>
 {% endblock %}
