--- a/pyscada/laborem/templates/DUT.html
+++ b/pyscada/laborem/templates/DUT.html
@@ -1,7 +1,7 @@
 {% if plug.plug_image %}
     <a href="javascript:;" class="list-group-item list-dut-item" data-img="{{ plug.plug_image.url }}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.description }}
 {% else %}
-    <a href="javascript:;" class="list-group-item list-dut-item" data-img="/media/img/laborem/plugs/no_img.jpg" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.description }}
+    <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% static 'pyscada/laborem/img/no_img.jpg' %}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.description }}
 {% endif %}
 {% if "ROBOT" in plug.name|upper %}
     <span class="badge">Robot</span>
