--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -123,7 +123,7 @@
             </ul>
         </div>
     {% endfor %}
-    <div class="camera side-menu left">
+    <div class="camera side-menu left hidden">
         <ul class="status-panel">
             <li>Camera</li>
             <img id="camera-img" src="{% static 'pyscada/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
@@ -137,8 +137,8 @@
     <div class="row">
         <div class="message-laborem side-menu top col-md-4 col-md-offset-4">
             <h2><img id="laborem-loadingAnimation" style="height:30px;padding-bottom:3px;" src="{% static 'pyscada/img/load.gif' %}" alt="loading"> Nothing to say</h2>
-            <div style="width:50%; margin-left: auto; margin-right: auto;">
-                <div class="progress-bar hidden" role="progressbar" style="min-width: 2em;width:100%">100%</div>
+            <div class="progress" style="width:50%; margin-left: auto; margin-right: auto;">
+                <div class="progress-bar hidden" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em;width:100%">100%</div>
             </div>
         </div>
     </div>
@@ -155,19 +155,20 @@
 <script type="text/javascript" src="{% static "pyscada/laborem/js/pyscada_laborem.js" %}"></script>
 {% endblock %}
 {% block script_bottom %}
-window.onload = function() {
-    var image = document.getElementById("camera-img");
-
-    function updateImage() {
-        image.src = "http://" + window.location.hostname + ":8090/?action=stream"
-    }
-
-    setInterval(updateImage, 1000);
-}
-
         $( document ).ready(function() {
             // Handler for .ready() called.
-            
+
+            // Load camera image
+            window.onload = function() {
+                var image = document.getElementById("camera-img");
+
+                function updateImage() {
+                    image.src = "http://" + window.location.hostname + ":8090/?action=stream"
+                }
+
+                setInterval(updateImage, 3000);
+            }
+
             // hide all pages
             $(".sub-page").hide();
             if (window.location.hash.length > 0) {
