Fix load static files in DUT and DUT selector Complete list of 16 plugs in get_selected_plug

--- a/pyscada/laborem/templates/DUT_selector.html
+++ b/pyscada/laborem/templates/DUT_selector.html
@@ -1,3 +1,4 @@
+{% load i18n staticfiles %}
 <br><br><br>Liste des montages :<br>
 {% if not dut_selector.plug1 and not dut_selector.plug2 and not dut_selector.plug3 and not dut_selector.plug4 and not dut_selector.plug5 and not dut_selector.plug6 and not dut_selector.plug7 and not dut_selector.plug8 and not dut_selector.plug9 and not dut_selector.plug10 and not dut_selector.plug11 and not dut_selector.plug12 and not dut_selector.plug13 and not dut_selector.plug14 and not dut_selector.plug15 and not dut_selector.plug16 %}
     No plug config
