--- a/pyscada/laborem/templates/DUT.html
+++ b/pyscada/laborem/templates/DUT.html
@@ -1,3 +1,4 @@
+{% load i18n staticfiles %}
 {% if plug.plug_image %}
     <a href="javascript:;" class="list-group-item list-dut-item" data-img="{{ plug.plug_image.url }}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.description }}
 {% else %}
