--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -134,6 +134,7 @@
             <li>Summary</li>
         </ul>
     </div>
+    <!--
     <div class="row">
         <div class="message-laborem side-menu top col-md-4 col-md-offset-4">
             <h2><img id="laborem-loadingAnimation" style="height:30px;padding-bottom:3px;" src="{% static 'pyscada/img/load.gif' %}" alt="loading"> Nothing to say</h2>
@@ -141,6 +142,34 @@
                 <div class="progress-bar hidden" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em;width:100%">100%</div>
             </div>
         </div>
+    </div>
+    -->
+    <!-- Modal -->
+    <div class="modal fade" id="MessageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-backdrop="static">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close hidden" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">LaboREM is working...</h4>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+                <div class="message-laborem">
+                    <h2>Nothing to say</h2>
+                    <div class="progress" style="width:50%; margin-left: auto; margin-right: auto;">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em;width:100%">100%</div>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <ul class="summary-modal status-panel">
+                <li>Summary Modal</li>
+            </ul>
+            <button type="button" class="btn btn-default hidden" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
     </div>
 {% endblock %}
 {% block include_bootom %}
