--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -144,7 +144,7 @@
     <div class="camera side-menu left hidden">
         <ul class="status-panel">
             <li>Camera</li>
-            <img id="camera-img" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
+            <img class="camera-img" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
         </ul>
     </div>
     <div class="summary side-menu right hidden col-md-3" style="width: 300px; list-style: circle;">
@@ -186,7 +186,7 @@
                     <ul class="status-panel">
                         <li class="col-md-2">Camera</li>
                         <br>
-                        <img class="col-md-12" id="camera-img-modal" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
+                        <img class="camera-img col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
                     </ul>
                 </div>
                 <div class="summary-modal col-md-6">
@@ -218,12 +218,11 @@
 
             // Load camera image
             window.onload = function() {
-                var image = document.getElementById("camera-img");
-
                 function updateImage() {
-                    image.src = "http://" + window.location.hostname + ":8090/?action=stream"
+                    $(".camera-img").each(function(){
+                        $(this)[0].src = "http://" + window.location.hostname + ":8090/?action=stream"
+                    });
                 }
-
                 setInterval(updateImage, 3000);
             }
 
