--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -233,7 +233,17 @@
             }else{
                 window.location.hash = $('ul.navbar-nav li a').first().attr("href");
             }
-            
+            // move overlapping side menus
+            var menu_pos = $('footer')[0].clientHeight + 6;
+            $.each($('.side-menu.left'),function(key,val){
+                $(val).attr("style","bottom: " + menu_pos + "px;");
+                menu_pos = menu_pos + val.clientHeight + 10;
+            });
+            var menu_pos = $('footer')[0].clientHeight + 6;
+            $.each($('.side-menu.right'),function(key,val){
+                $(val).attr("style","bottom: " + menu_pos + "px;");
+                menu_pos = menu_pos + val.clientHeight + 10;
+            });
             // sidemenues
             $('.side-menu.left').mouseenter(function(){
                 $(this).stop().CSSAnimate({"left":0},500)
@@ -275,16 +285,6 @@
                     // show only new content
                     $(window.location.hash).show();
                 };
-            });
-            var menu_pos = $('footer')[0].clientHeight + 6;
-            $.each($('.side-menu.left'),function(key,val){
-                $(val).attr("style","bottom: " + menu_pos + "px;");
-                menu_pos = menu_pos + val.clientHeight + 10;
-            });
-            var menu_pos = $('footer')[0].clientHeight + 6;
-            $.each($('.side-menu.right'),function(key,val){
-                $(val).attr("style","bottom: " + menu_pos + "px;");
-                menu_pos = menu_pos + val.clientHeight + 10;
             });
         });
 {% endblock %}
