Add field if a plug is modifiable with a robot and change the js and html for this. Add the nginx reverse proxy to show the camera through https

--- a/pyscada/laborem/templates/DUT.html
+++ b/pyscada/laborem/templates/DUT.html
@@ -4,7 +4,7 @@
 {% else %}
     <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% static 'pyscada/laborem/img/no_img.jpg' %}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.description }}
 {% endif %}
-{% if "ROBOT" in plug.name|upper %}
+{% if plug.robot %}
     <span class="badge">Robot</span>
 {% endif %}
 </a>
