--- a/pyscada/laborem/templates/form_TOP10.html
+++ b/pyscada/laborem/templates/form_TOP10.html
@@ -1,4 +1,4 @@
-<form name="{{ form.title }}">
+<form name="{{ form.title }}" class="form" id="{{ form.web_id }}">
     {% for item in form.hidden_control_items_to_true.all %}
         {% if item.active == 1 %}
             {% if item.type == 5 %}<!-- hidden form input {{ item.key }} -->
