--- a/pyscada/laborem/templates/robot_selector.html
+++ b/pyscada/laborem/templates/robot_selector.html
@@ -1,4 +1,4 @@
-Robot selector for {{ base.name }}:<br>
+Sélectionner le composant à placer sur {{ base.description }} :<br>
 <div class="dropdown dropdown-robot col-md-2" id="{{ base.pk }}">
     <button class="btn btn-primary dropdown-toggle dropdown-robot-btn" type="button" data-toggle="dropdown">
         <span class="ui-dropdown-robot-bnt">------- </span>
