Fix script to move the robot

--- a/pyscada/laborem/templates/DUT_selector.html
+++ b/pyscada/laborem/templates/DUT_selector.html
@@ -3,7 +3,7 @@
 {% if not dut_selector.plug1 and not dut_selector.plug2 and not dut_selector.plug3 and not dut_selector.plug4 and not dut_selector.plug5 and not dut_selector.plug6 and not dut_selector.plug7 and not dut_selector.plug8 and not dut_selector.plug9 and not dut_selector.plug10 and not dut_selector.plug11 and not dut_selector.plug12 and not dut_selector.plug13 and not dut_selector.plug14 and not dut_selector.plug15 and not dut_selector.plug16 %}
     No plug config
 {% else %}
-    <div class="col-md-4"><img src="{% static 'pyscada/laborem/img/select_filter.jpg' %}" class="img-plug img-responsive" alt="Select a Device Under Test"></div>
+    <div class="col-md-4"><img src="{% static 'pyscada/laborem/img/select_filter.jpg' %}" class="img-plug img-responsive" alt="Select a Device Under Test" data-img="{% static 'pyscada/laborem/img/select_filter.jpg' %}"></div>
     <div class="list-group list-dut col-md-4" id="ListPlugs">
         {% if dut_selector.plug1 %}
             {% include "DUT.html" with dut_selector=dut_selector plug=dut_selector.plug1 plug_id="1" %}
