Add hide tooltip on pages without chart Add tooltip div in base to not have more than one Add sleep time in laborem script before starting bode or spectrum analysis Fix check_user function to show laborem message even if not working user (when laborem is off)

--- a/pyscada/laborem/templates/base_laborem.html
+++ b/pyscada/laborem/templates/base_laborem.html
@@ -83,5 +83,6 @@
         <script>
         {% block script_bottom %}{% endblock %}
         </script>
+        <div id='tooltip'></div>
     </body>
 </html>
