Fix user stop button

--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -202,7 +202,7 @@
               </div>
               <div class="row">
                   <div class="col-md-3 col-md-offset-9">
-                    <button type="button" class="user_stop_btn btn btn-danger" data-dismiss="modal">Arrêter</button>
+                    <button type="button" class="user_stop_btn btn btn-danger">Arrêter</button>
                   </div>
               </div>
           </div>
