--- a/pyscada/laborem/templates/DUT.html
+++ b/pyscada/laborem/templates/DUT.html
@@ -4,12 +4,12 @@
 {% else %}
     <a href="javascript:;" class="list-group-item list-dut-item" data-img="{% static 'pyscada/laborem/img/no_img.jpg' %}" data-motherboard-id="{{ dut_selector.pk }}" data-plug-id="{{ plug_id }}" data-plug-name="{{ plug.name|upper }}">{{ plug.name }}
 {% endif %}
-{% if plug.get_level_display == "Easy" %}
-    <span class="badge level" style="background-color: #34D942">{{ plug.get_level_display }}</span>
-{% elif plug.get_level_display == "Medium" %}
-    <span class="badge level" style="background-color: orange">{{ plug.get_level_display }}</span>
-{% elif plug.get_level_display == "Hard" %}
-    <span class="badge level" style="background-color: #EE4646">{{ plug.get_level_display }}</span>
+{% if plug.get_level_display == "beginner" %}
+    <span class="badge level" style="background-color: #34D942">Débutant</span>
+{% elif plug.get_level_display == "intermediate" %}
+    <span class="badge level" style="background-color: orange">Intermédiaire</span>
+{% elif plug.get_level_display == "advanced" %}
+    <span class="badge level" style="background-color: #EE4646">Avancé</span>
 {% endif %}
 {% if plug.robot %}
     <span class="badge robot">Robot</span>
