--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -1,14 +1,14 @@
 {% extends "base_laborem.html" %}
 {% load i18n staticfiles %}
 
-{% block title %}{{ view_title }} - PyScada-LaboREM Control Center{% endblock %}
+{% block title %}{{ view_title }} - PyScada-Laborem Control Center{% endblock %}
 {% block body_confic_data %} data-data-file="json/cache_data/" {% endblock %}
 {% block top_menu_left %}
     {% for page in page_list %}
         <li class="hidden"><a href="#{{page.link_title}}">{{page.title}}</a></li>
     {% endfor %}
-    <li><a href="#" style="color: lightcoral; font-size: 16px;" class="btn-previous">Previous <span class="glyphicon glyphicon-chevron-left"></span></a></li>
-    <li><a href="#" style="color: lightgreen; font-size: 16px;" class="btn-next"><span class="glyphicon glyphicon-chevron-right"></span> Next</a></li>
+    <li><a href="#" style="color: lightcoral; font-size: 16px;" class="btn-previous">Précédent <span class="glyphicon glyphicon-chevron-left"></span></a></li>
+    <li><a href="#" style="color: lightgreen; font-size: 16px;" class="btn-next"><span class="glyphicon glyphicon-chevron-right"></span> Suivant</a></li>
 {% endblock %}
 
 {% block top_menu_right %}
@@ -173,7 +173,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close hidden" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="MessageModalLabel">LaboREM is working...</h4>
+            <h4 class="modal-title" id="MessageModalLabel">Laborem is working...</h4>
           </div>
           <div class="modal-body">
             <div class="row">
