Move change selected plug to page change Fix check_user calling itself Add laborem version in footer Add logs

--- a/pyscada/laborem/templates/base_laborem.html
+++ b/pyscada/laborem/templates/base_laborem.html
@@ -69,6 +69,7 @@
         </div>
         <footer class="footer">
         <span class="pull-left">{% if version_string %}PyScada Version: {{version_string}}{% endif %}</span>
+        <span class="pull-left">{% if version_string %}&nbsp; - PyScada-Laborem Version: {{laborem_version_string}}{% endif %}</span>
         <span class="pull-right server_time"></span>
         </footer>
         <!-- Bootstrap core JavaScript
