--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -173,7 +173,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close hidden" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="MessageModalLabel">Laborem is working...</h4>
+            <h4 class="modal-title" id="MessageModalLabel">Veuillez patienter...</h4>
           </div>
           <div class="modal-body">
             <div class="row">
