--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -13,7 +13,7 @@
 
 {% block top_menu_right %}
     <li class="dropdown dropdown-WaitingList">
-        <a class="dropdown-toggle dropdown-WaitingList-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-time"></span> Waiting List <strong class="caret"></strong></a>
+        <a class="dropdown-toggle dropdown-WaitingList-toggle" href="#" data-toggle="dropdown"><span class="glyphicon glyphicon-time"></span> File d'attente <strong class="caret"></strong></a>
         <div class="dropdown-menu" style="padding: 15px;">
             <div class="control-panel">
                 <table class="table table-condensed table-striped table-responsive table-activeuser" style="width: 300px;">
