Update scripts to reduce CPU and time to execute Fix summary in js Refresh each second for a viewer with < 12s to wait Add axisvalues plugin

--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -268,6 +268,7 @@
 <script type="text/javascript" src="{% static "pyscada/js/flot/jquery.flot.time.min.js" %}"></script>
 <script type="text/javascript" src="{% static "pyscada/js/flot/jquery.flot.selection.min.js" %}"></script>
 <script type="text/javascript" src="{% static "pyscada/js/flot/jquery.flot.axislabels.js" %}"></script>
+<script type="text/javascript" src="{% static "pyscada/js/flot/jquery.flot.axisvalues.min.js" %}"></script>
 <script type="text/javascript" src="{% static "pyscada/js/pyscada/pyscada_v0-7-0rc13.js" %}"></script>
 <script type="text/javascript" src="{% static "pyscada/laborem/js/pyscada_laborem.js" %}"></script>
 {% endblock %}
