--- a/pyscada/laborem/templates/view_laborem_overview.html
+++ b/pyscada/laborem/templates/view_laborem_overview.html
@@ -7,6 +7,7 @@
         {% if view.visible %}
         <div class="col-sm-3">
         <div class="panel panel-default">
+            {% if view.link_title == "laborem" %}
                 <div class="panel-heading">
                     <h3 class="panel-title"><a href="{% url 'main-laborem-view' view.link_title %}" target="_blank" >{{ view.title }}</a></h3>
                 </div>
@@ -16,6 +17,17 @@
                 {% else %}
                 <a href="{% url 'main-laborem-view' view.link_title %}" class="thumbnail" target="_blank" ><p style="min-height: 120px;">{{ view.description }}</p></a>
                 {% endif %}
+            {% else %}
+                <div class="panel-heading">
+                    <h3 class="panel-title"><a href="{% url 'main-view' view.link_title %}" target="_blank" >{{ view.title }}</a></h3>
+                </div>
+                <div class="panel-body">
+                {% if view.logo %}
+                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="_blank" ><img src="{{ view.logo.url }}" alt="{{ view.description }}"  width="100%" ></a>
+                {% else %}
+                <a href="{% url 'main-view' view.link_title %}" class="thumbnail" target="_blank" ><p style="min-height: 120px;">{{ view.description }}</p></a>
+                {% endif %}
+            {% endif %}
             </div>
            </div>
         </div>
