--- a/pyscada/laborem/templates/base_laborem.html
+++ b/pyscada/laborem/templates/base_laborem.html
@@ -27,6 +27,7 @@
             <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
+                        <p style="float:left;margin-bottom:0px;margin-right:15px;"><img src="/static/pyscada/img/UOuagalogo.jpg" height=50px>&nbsp;&nbsp;<img src="/static/pyscada/img/AUFlogo.jpg" height=50px></p>
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -72,6 +73,7 @@
         <span class="pull-left">{% if version_string %}&nbsp; - PyScada-Laborem Version: {{laborem_version_string}}{% endif %}</span>
         <span class="pull-right server_time"></span>
         </footer>
+        <canvas id="myCanvas" width="30" height="15" style="display:none"></canvas>
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
