Update Readme Fix img-plug width Fix Picamera in view

--- a/pyscada/laborem/templates/view_laborem.html
+++ b/pyscada/laborem/templates/view_laborem.html
@@ -193,6 +193,7 @@
                         <li class="col-md-2">Camera</li>
                         <br>
                         <img class="camera-img col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
+                        <img class="pi-camera-img col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
                     </ul>
                 </div>
                 <div class="summary-modal col-md-6">
@@ -243,6 +244,7 @@
                         <li class="col-md-2">Caméra</li>
                         <br>
                         <img class="camera-img col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
+                        <img class="pi-camera-img col-md-12" src="{% static 'pyscada/laborem/img/load.gif' %}" onerror="this.src='{% static 'pyscada/laborem/img/webcam-offline.jpg' %}'" width="320px" height="240px" alt="Camera view">
                     </ul>
                 </div>
                 <div class="summary-modal col-md-6">
